--- a/web/public/styles.css
+++ b/web/public/styles.css
@@ -13,6 +13,30 @@ html {
   min-height: 40vh;
 }
 
+.p-3 {
+  padding: 0.75rem;
+}
+
 .p-6 {
   padding: 1.5rem;
+}
+
+.collapsible {
+  max-height: 40em;
+  overflow: hidden;
+  transition: max-height 0.5s;
+}
+
+.collapsible.collapsed {
+  max-height: 0;
+  position: relative;
+}
+
+.collapsible.collapsed::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background: linear-gradient(transparent, #FFF);
 }
