--- a/web/views/layout.erb
+++ b/web/views/layout.erb
@@ -6,23 +6,24 @@
   <title>Living Document</title>
   <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
-<body class="p-3">
-  <div class="p-3">
-    <h2>
-      Frontmatter
-      <button data-collapsible data-target="#frontmatter">Toggle</button>
-    </h2>
-    <div id="frontmatter" class="collapsible p-6" contenteditable="true"
+<body class="row p-3">
+  <div class="column">
+      <div class="p-3">
+        <h2>
+          Frontmatter
+          <button data-collapsible data-target="#frontmatter">Toggle</button>
+        </h2>
+        <div id="frontmatter" class="collapsible bordered p-6" contenteditable="true"
 >require 'yaml'
 
 def puts(printed_value)
   $printed_objects << printed_value
 end
 </div>
-  </div>
-  <div class="p-3">
-    <h2>Code (run with Cmd + Enter)</h2>
-    <div id="scratchpad" class="p-6" contenteditable="true"
+      </div>
+      <div class="p-3">
+        <h2>Code (run with Cmd + Enter)</h2>
+        <div id="scratchpad" class="bordered p-6" contenteditable="true"
 >a = 1
 b = 2
 a + b
@@ -37,6 +38,11 @@ puts('This is one nice string!')
 YAML.load("---\nworks: true")
 ###
 </div>
+      </div>
+  </div>
+  <div class="column p-3">
+    <h2>Rendered markdown</h2>
+    <div id="rendered-markdown" class="bordered p-3"></div>
   </div>
   <script type="text/javascript" src="utils.js"></script>
   <script type="text/javascript" src="livdoc.js"></script>
